@@ -9,10 +9,12 @@
     <string id="32123">Benachrichtigungsdauer</string>
     <string id="32124">aktuelle Einstellungen testen (bitte 1 Minute warten)</string>
     <string id="32125">TV ausschalten (CEC)</string>
+    <string id="32126">Addon ID</string>
     <!-- defined actions -->
     <string id="32130">Abspielen stoppen</string>
     <string id="32131">System neu starten</string>
     <string id="32132">System ausschalten</string>
     <string id="32133">System in Ruhezustand versetzen</string>
     <string id="32134">System in Bereitschaft versetzen</string>
+    <string id="32135">Addon starten</string>
 </strings>
