@@ -2,7 +2,8 @@
 <settings>
     <setting id="maxIdleTime" type="labelenum" label="32120"
              values="15 min|30 min|45 min|60 min|75 min|90 min|105 min|120 min|150 min|180 min|210 min|240 min|300 min|360 min|420 min|480 min|540 min|600 min|660 min|720 min|780 min|840 min|900 min" default="120 min" />
-    <setting id="action" type="enum" label="32121" lvalues="32130|32131|32132|32133|32134" default="0" />
+    <setting id="action" type="enum" label="32121" lvalues="32130|32131|32132|32133|32134|32135" default="0" />
+    <setting id="addon_id" type="text" subsetting="true" label="32126" enable="eq(-1,5)" />
     <setting id="sendCEC" type="bool" label="32125" default="false" />
     <setting id="showPopup" type="bool" label="32122" default="true" />
     <setting id="notificationTime" type="labelenum" label="32123" enable="eq(-1,true)"
